Bug: overflow-wrap when displaying tweets with no spaces

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -34,6 +34,7 @@ article.tweet p {
   border-bottom: 4px solid black;
   padding-bottom: 24px;
   margin: 12px;
+  overflow-wrap: anywhere;
 }
 
 article.tweet footer {
